--- a/package.json
+++ b/package.json
@@ -14,20 +14,31 @@
     "react-scripts": "4.0.0",
     "reactjs-popup": "^2.0.4",
     "redux-zero": "^5.1.7",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "format": "prettier --write .",
+    "lint": "eslint src/**/*.jsx .",
+    "lint:fix": "eslint src/**/*.jsx --fix",
     "prepare": "husky install"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "prettier --config .prettierrc . --ext .{jsx,json} --write"
+    }
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "ignorePatterns": [
+      "**/node_modules/**",
+      "**/html/**"
     ]
   },
   "browserslist": {
@@ -44,6 +55,15 @@
   },
   "devDependencies": {
     "husky": "^7.0.4",
+    "eslint": "^7.30.0",
+    "lint-staged": ">=10",
     "prettier": "^2.3.2"
+  },
+  "lint-staged": {
+    "*.jsx": [
+      "eslint . --fix",
+      "prettier --write src/",
+      "git add ."
+    ]
   }
 }
