--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -31,16 +28,6 @@
       "pre-commit": "prettier --config .prettierrc . --ext .{jsx,json} --write"
     }
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "ignorePatterns": [
-      "**/node_modules/**",
-      "**/html/**"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -48,14 +35,17 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.3%",
+      "not ie 11",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "devDependencies": {
-    "husky": "^7.0.4",
     "eslint": "^7.30.0",
+    "eslint-plugin-import-newlines": "^1.1.3",
+    "eslint-plugin-react": "7.24.0",
+    "husky": "^7.0.0",
     "lint-staged": ">=10",
     "prettier": "^2.3.2"
   },
