--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write .",
     "lint": "eslint src/**/*.jsx .",
+    "precommit": "lint-staged",
     "lint:fix": "eslint src/**/*.jsx --fix",
     "prepare": "husky install"
   },
@@ -50,10 +51,8 @@
     "prettier": "^2.3.2"
   },
   "lint-staged": {
-    "*.jsx": [
-      "eslint . --fix",
-      "prettier --write src/",
-      "git add ."
+    "*.js": [
+      "prettier --write"
     ]
   }
 }
