--- a/.eslintrc
+++ b/.eslintrc
@@ -126,7 +126,7 @@
     // These rules are purely matters of style and are quite subjective.
     //
     "indent": [1, 2], // this option sets a specific tab width for your code (off by default)
-    "brace-style": 1, // enforce one true brace style (off by default)
+    "brace-style": 0, // enforce one true brace style (off by default)
     "camelcase": 1, // require camel case names
     "comma-spacing": [1, { "before": false, "after": true }], // enforce spacing before and after comma
     "comma-style": [1, "last"], // enforce one true comma style (off by default)
@@ -157,13 +157,18 @@
     "semi-spacing": [1, { "before": false, "after": true }], // enforce spacing before and after semicolons
     "sort-vars": 0, // sort variables within the same declaration block (off by default)
     "space-before-blocks": [1, "always"], // require or disallow space before blocks (off by default)
+    "max-lines": [
+      "error",
+      200
+    ],
     "space-before-function-paren": [
       1,
       { "anonymous": "always", "named": "never" }
     ], // require or disallow space before function opening parenthesis (off by default)
-    "space-in-brackets": [1, "never"], // require or disallow spaces inside brackets (off by default)
+    // "space-in-brackets": [1, "never"], // require or disallow spaces inside brackets (off by default)
+    "object-curly-spacing": 0,
     "space-in-parens": [1, "never"], // require or disallow spaces inside parentheses (off by default)
-    // "space-infix-ops": [1, "always"], // require spaces around operators
+    "space-infix-ops": "error", // require spaces around operators
     "keyword-spacing": ["error", { "before": true, "after": true }], // require a space after return, throw, and case
     "space-unary-ops": [1, { "words": true, "nonwords": false }], // Require or disallow spaces before/after unary operators (words on by default, nonwords off by default)
     "spaced-comment": [1, "always"], // require or disallow a space immediately following the // in a line comment (off by default)
