--- a/.eslintrc
+++ b/.eslintrc
@@ -10,22 +10,23 @@
     "allowImportExportEverywhere": true,
     "ecmaVersion": 2017
   },
+  "ignorePatterns": ["*.test.jsx", "*.jsx"],
   "plugins": ["react"],
 
   "rules": {
     "no-console": ["error"], // disallow use of console (off by default in the node environment)
-    "no-constant-condition": 2, // disallow use of constant expressions in conditions
-    "no-control-regex": 2, // disallow control characters in regular expressions
+    "no-constant-condition": 0, // disallow use of constant expressions in conditions
+    "no-control-regex": 1, // disallow control characters in regular expressions
     "no-debugger": 2, // disallow use of debugger
     "no-dupe-args": 2, // disallow duplicate arguments in functions
     "no-dupe-keys": 2, // disallow duplicate keys when creating object literals
     "no-duplicate-case": 2, // disallow a duplicate case label.
-    "no-empty": 2, // disallow empty statements
+    "no-empty": 1, // disallow empty statements
     "no-empty-character-class": 2, // disallow the use of empty character classes in regular expressions
     "no-ex-assign": 2, // disallow assigning to the exception in a catch block
     "no-extra-boolean-cast": 2, // disallow double-negation boolean casts in a boolean context
     "no-extra-parens": 0, // disallow unnecessary parentheses (off by default)
-    "no-extra-semi": 2, // disallow unnecessary semicolons
+    "no-extra-semi": 0, // disallow unnecessary semicolons
     "no-func-assign": 2, // disallow overwriting functions written as function declarations
     "no-inner-declarations": 2, // disallow function or variable declarations in nested blocks
     "no-invalid-regexp": 2, // disallow invalid regular expression strings in the RegExp constructor
@@ -77,7 +78,7 @@
     "no-octal": 2, // disallow use of octal literals
     "no-octal-escape": 2, // disallow use of octal escape sequences in string literals, such as var foo = "Copyright \251";
     "no-param-reassign": 2, // disallow reassignment of function parameters (off by default)
-    "no-process-env": 2, // disallow use of process.env (off by default)
+    "no-process-env": 0, // disallow use of process.env (off by default)
     "no-proto": 2, // disallow usage of __proto__ property
     "no-redeclare": 2, // disallow declaring the same variable more then once
     "no-return-assign": 2, // disallow use of assignment in return statement
@@ -116,7 +117,7 @@
     "no-shadow-restricted-names": 2, // disallow shadowing of names such as arguments
     "no-undef": 2, // disallow use of undeclared variables unless mentioned in a /*global */ block
     "no-undef-init": 2, // disallow use of undefined when initializing variables
-    "no-undefined": 2, // disallow use of undefined variable (off by default)
+    "no-undefined": 0, // disallow use of undefined variable (off by default)
     "no-unused-vars": 1, // disallow declaration of variables that are not used in the code
     "no-use-before-define": 0, // disallow use of variables before they are defined
 
@@ -153,7 +154,7 @@
     "one-var": [1, "never"], // allow just one var statement per function (off by default)
     "operator-assignment": [1, "never"], // require assignment operator shorthand where possible or prohibit it entirely (off by default)
     "padded-blocks": [1, "never"], // enforce padding within blocks (off by default)
-    "quote-props": [1, "as-needed"], // require quotes around object literal property names (off by default)
+    "quote-props": [0, "as-needed"], // require quotes around object literal property names (off by default)
     "semi-spacing": [1, { "before": false, "after": true }], // enforce spacing before and after semicolons
     "sort-vars": 0, // sort variables within the same declaration block (off by default)
     "space-before-blocks": [1, "always"], // require or disallow space before blocks (off by default)
@@ -191,24 +192,32 @@
     "max-params": [2, 5], // limits the number of parameters that can be used in the function declaration. (off by default)
     "max-statements": 0, // specify the maximum number of statement allowed in a function (off by default)
     "no-bitwise": 0, // disallow use of bitwise operators (off by default)
-    "no-plusplus": 0, // disallow use of unary operators, ++ and -- (off by default)
+    "no-plusplus": 0 // disallow use of unary operators, ++ and -- (off by default)
 
-    //
-    // eslint-plugin-react
-    //
-    // React specific linting rules for ESLint
-    //
-    "react/display-name": 0, // Prevent missing displayName in a React component definition
-    "react/jsx-no-undef": 2, // Disallow undeclared variables in JSX
-    "react/jsx-sort-props": 0, // Enforce props alphabetical sorting
-    "react/jsx-uses-react": 2, // Prevent React to be incorrectly marked as unused
-    "react/jsx-uses-vars": 2, // Prevent variables used in JSX to be incorrectly marked as unused
-    "react/no-did-mount-set-state": 2, // Prevent usage of setState in componentDidMount
-    "react/no-did-update-set-state": 2, // Prevent usage of setState in componentDidUpdate
-    "react/no-multi-comp": 0, // Prevent multiple component definition per file
-    "react/no-unknown-property": 2, // Prevent usage of unknown DOM property
-    "react/prop-types": 0, // Prevent missing props validation in a React component definition
-    "react/react-in-jsx-scope": 0, // Prevent missing React when using JSX
-    "react/self-closing-comp": 2 // Prevent extra closing tags for components without children
-  }
+    // //
+    // // eslint-plugin-react
+    // //
+    // // React specific linting rules for ESLint
+    // //
+    // "react/display-name": 0, // Prevent missing displayName in a React component definition
+    // "react/jsx-no-undef": 2, // Disallow undeclared variables in JSX
+    // "react/jsx-sort-props": 0, // Enforce props alphabetical sorting
+    // "react/jsx-uses-react": 2, // Prevent React to be incorrectly marked as unused
+    // "react/jsx-uses-vars": 2, // Prevent variables used in JSX to be incorrectly marked as unused
+    // "react/no-did-mount-set-state": 2, // Prevent usage of setState in componentDidMount
+    // "react/no-did-update-set-state": 2, // Prevent usage of setState in componentDidUpdate
+    // "react/no-multi-comp": 0, // Prevent multiple component definition per file
+    // "react/no-unknown-property": 2, // Prevent usage of unknown DOM property
+    // "react/prop-types": 0, // Prevent missing props validation in a React component definition
+    // "react/react-in-jsx-scope": 0, // Prevent missing React when using JSX
+    // "react/self-closing-comp": 2 // Prevent extra closing tags for components without children
+  },
+  "overrides": [
+    {
+      "files": ["App.jsx"],
+      "rules": {
+        "no-debugger": "error"
+      }
+    }
+  ]
 }
